--- a/part-time-jobs-app/package.json
+++ b/part-time-jobs-app/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.5.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
